# dev-stack

./: .dockerignore  .gitignore  README.md  README.md.bak  dev-stack.code-workspace  pyproject.toml
.github/agents/: copilot-instructions.md
.specify/memory/: constitution.md
specs/001-dev-stack-ecosystem/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-soften-sphinx-warnings/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-init-pipeline-enhancements/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-codeboarding-viz/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-vcs-best-practices/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-readme-update/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-init-pipeline-bugfixes/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-init-onboarding-fixes/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-greenfield-init-fixes/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-pipeline-commit-hygiene/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-proactive-agent-instructions/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/011-pipeline-commit-fixes/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/012-universal-init-pipeline/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/013-apm-module-swap/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/014-apm-module-swap/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/016-brownfield-init-bugs/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/017-package-layout-detection/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/018-soften-sphinx-warnings/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/019-understand-anything-swap/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/020-update-apm-defaults/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/021-update-workflow-bugs/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/dev_stack/: __init__.py  config.py  errors.py  layout.py  manifest.py
tests/contract/: test_apm_contract.py  test_cli_changelog.py  test_cli_hooks.py  test_cli_json_output.py  test_cli_pr.py  (+4 more)
(+195 files in other folders)
